--- a/belatro-frontend-web/src/App.css
+++ b/belatro-frontend-web/src/App.css
@@ -539,6 +539,7 @@ body {
 }
 
 .close-button {
+  background-color: #27232a;
   position: absolute;
   top: 10px;
   right: 15px;
@@ -547,6 +548,10 @@ body {
   font-size: 22px;
   border: none;
   cursor: pointer;
+}
+
+.close-button:hover{
+  background-color: #332f35;
 }
 
 .skin-section {
@@ -622,7 +627,7 @@ body {
 }
 
 .close-button {
-  background-color: #332f35;
+  background-color: #27232a;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -630,21 +635,117 @@ body {
   cursor: pointer;
   margin-top: 10px;
   float: right;
+  transition: background-color 0.3s;
 }
 
 .close-button:hover {
-  background-color: #3d3a40;
+  background-color: #332f35;
 }
 
-/*LOBBY*/
+/* LOBBY */
 
 .lobby-container {
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 720px;
+  position: relative;
+}
+
+.lobby-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  flex-wrap: wrap;
+  margin: auto;
   text-align: center;
 }
 
-.lobby-container h2 {
+.team {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+
+.player-button,
+.leave-button,
+.lobby-code {
+  background-color: #27232a;
   color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 20px;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.player-button {
+  font-size: 18px;
+  padding: 25px;
+  cursor: pointer;
+  width: 350px;
+}
+
+.player-button:hover {
+  background-color: #332f35;
+}
+
+.vs-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.start-button {
+  background-color: #b8423e;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 12px 40px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.start-button:hover {
+  background-color: #a63632;
+}
+
+.leave-button {
+  position: absolute;
+  bottom: 40px;
+  left: 100px;
+  font-size: 18px;
+  padding: 25px 40px;
+  transition: background-color 0.2s ease-in-out
+}
+
+.leave-button:hover{
+  background-color: #332f35;
+}
+
+.lobby-code {
+  position: absolute;
+  bottom: 40px;
+  right: 100px;
+  font-size: 18px;
+  padding: 25px 40px;
+}
+
+.lobby-id {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #27232a;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 25px 40px;
+  border-radius: 20px;
+  text-align: center;
 }
 
 /*USER DROPDOWN*/
@@ -722,6 +823,194 @@ body {
   width: 100%;
 }
 
+/*LOBBY MODE MODAL*/
+
+.lobby-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lobby-modal-content {
+  background-color: #151316;
+  color: white;
+  padding: 25px;
+  border-radius: 10px;
+  width: 600px;
+  max-height: 80%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.lobby-modal-content h2 {
+  margin: 0;
+  text-align: center;
+}
+
+.lobby-modal-content label {
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.lobby-modal-content input {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 10px;
+  font-size: 16px;
+  width: 100%;
+}
+
+.button-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+/*MATCH PAGE*/
+
+.match-container {
+  position: relative;
+  width: 100%;
+  height: 839px;
+  overflow: hidden;
+  background-color: #101020;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.table {
+  position: relative;
+  width: 80%;
+  height: 80%;
+}
+
+.turn-indicator {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  font-weight: bold;
+  color: #00ff88;
+}
+
+.player {
+  text-align: center;
+  color: white;
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  background-color: #444;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.username {
+  margin-top: 0.2rem;
+}
+
+.card-count {
+  font-size: 0.9rem;
+  color: #aaa;
+}
+
+      /* POZICIONIRANJE */
+.player-top {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.player-left {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.player-right {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.center-play {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: red;
+}
+
+.player-hand {
+  position: absolute;
+  bottom: -80px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 80px;
+}
+
+.hand-cards {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 0.5rem;
+}
+
+.card {
+  padding: 0.5rem;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  min-width: 60px;
+  text-align: center;
+}
+
+      /* BOTUNI */
+
+.game-button {
+  position: fixed;
+  bottom: 100px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 12px;
+  background-color: #27232a;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  z-index: 10;
+}
+
+.game-button:hover {
+  background-color: #332f35;
+}
+
+.play-button {
+  left: 20px;
+}
+
+.bid-button {
+  right: 20px;
+}
 
 
 /*BOJE ZA DEBUGIRANJE PROFILEPAGEA*/
