--- a/belatro-frontend-web/src/App.css
+++ b/belatro-frontend-web/src/App.css
@@ -379,8 +379,8 @@ body {
 }
 
 .friend-avatar {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   margin-right: 10px;
 }
@@ -878,6 +878,12 @@ body {
 
 /*MATCH PAGE*/
 
+.match-wrapper {
+  background-color: #101020;
+  width: 100%;
+  min-height: 100vh;
+}
+
 .match-container {
   position: relative;
   width: 100%;
@@ -898,10 +904,18 @@ body {
 
 .turn-indicator {
   position: absolute;
-  top: 1rem;
-  left: 1rem;
+  top: 2rem;
+  left: 2rem;
+  font-size: 24px;
   font-weight: bold;
-  color: #00ff88;
+}
+
+.turn-indicator.your-turn {
+  color: limegreen;
+}
+
+.turn-indicator.waiting {
+  color: orange;
 }
 
 .player {
@@ -926,10 +940,21 @@ body {
   color: #aaa;
 }
 
-      /* POZICIONIRANJE */
+      /* POZICIONIRANJE I IGRACI */
+
+.player-bottom .username {
+  background-color: white;
+  color: #101020;
+  padding: 6px 25px;
+  border-radius: 15px;
+  font-weight: bold;
+  font-size: 16px;
+  margin-top: 8px;
+}
+
 .player-top {
   position: absolute;
-  top: 0;
+  top: -60px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -937,14 +962,14 @@ body {
 .player-left {
   position: absolute;
   top: 50%;
-  left: 0;
+  left: 90px;
   transform: translateY(-50%);
 }
 
 .player-right {
   position: absolute;
   top: 50%;
-  right: 0;
+  right: 90px;
   transform: translateY(-50%);
 }
 
@@ -958,37 +983,21 @@ body {
 
 .player-hand {
   position: absolute;
-  bottom: -80px;
+  bottom: -120px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 80px;
+  padding-bottom: 40px;
 }
 
-.hand-cards {
-  display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-  gap: 0.5rem;
-}
-
-.card {
-  padding: 0.5rem;
-  background-color: white;
-  color: black;
-  border-radius: 5px;
-  min-width: 60px;
-  text-align: center;
-}
-
-      /* BOTUNI */
+      /* PLAY BOTUN */
 
 .game-button {
   position: fixed;
   bottom: 100px;
-  padding: 10px 20px;
+  padding: 20px 20px;
   border: none;
   border-radius: 12px;
   background-color: #27232a;
@@ -1008,9 +1017,266 @@ body {
   left: 20px;
 }
 
-.bid-button {
+.game-button:disabled {
+  background-color: #555;
+  color: #aaa;
+  cursor: default;
+  opacity: 0.6;
+}
+
+          /* BID BOTUNI */
+
+.center-bid-buttons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  z-index: 999;
+}
+
+.center-bid-buttons button {
+  background-color: #27232a;
+  /*   
+  color: white;
+  font-size: 22px;
+  */
+  border: none;
+  padding: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  border-radius: 6px;
+}
+
+.center-bid-buttons button:hover {
+  background-color: #332f35;
+}
+
+.center-bid-buttons button img {
+  background: transparent;
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+  transition: transform 0.2s ease;
+}
+
+.center-bid-buttons button:hover img {
+  transform: scale(1.1);
+}
+
+.center-bid-buttons button.skip-button {
+  width: 100px;
+  height: 100px;
+  font-size: 28px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: red;
+  background-color: #27232a;
+  border-radius: 6px;
+  border: none;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.center-bid-buttons button.skip-button:hover {
+  background-color: #3a2c2c;
+}
+
+      /*CHALLENGE BOTUN*/
+
+.challenge-button {
   right: 20px;
 }
+
+      /*GORE DESNO SELEKTANA BID OPCIJA/TRUMP*/
+
+.trump-indicator {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+}
+
+.trump-indicator img {
+  width: 60px;
+  height: 60px;
+}
+
+      /*SCOREBOARD I TEAM LABEL*/
+
+.match-top-bar {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  z-index: 10;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.scoreboard {
+  position: absolute;
+  top: 2rem;
+  right: 300px;
+  background-color: #1e1e1e;
+  padding: 8px 20px;
+  border-radius: 8px;
+  display: flex;
+  gap: 30px;
+  z-index: 10;
+}
+
+.team-label {
+  position: absolute;
+  top: 2rem;
+  left: 300px;
+  background-color: #1e1e1e;
+  padding: 8px 20px;
+  border-radius: 8px;
+  color: #4caf50;
+  font-size: 18px;
+  font-weight: bold;
+  z-index: 10;
+}
+
+      /*KARTE ZA LOGED IN USERA*/
+
+.hand-cards {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 0.5rem;
+}
+
+.card {
+  padding: 0.5rem;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  min-width: 60px;
+  text-align: center;
+}
+
+.hand-card-image {
+  width: 150px;
+  height: auto;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  cursor: pointer;
+  transition: transform 0.2s, border 0.2s;
+  background-color: transparent !important;
+}
+
+.hand-card-image:hover {
+  transform: scale(1.05);
+}
+
+.hand-card-image.selected {
+  border: 2px solid white;
+  transform: scale(1.1);
+}
+
+        /* KARTE ZA OSTALE USERE */
+
+        /* GORNJI IGRAC */
+.player-top .card-back-stack {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 80px;
+  margin-top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+        /* LJEVI IGRAC */
+.player-left .card-back-stack {
+  transform: rotate(-90deg);
+  transform-origin: left center;
+  margin-left: 20px;
+}
+
+        /* DESNI IGRAC */
+.player-right .card-back-stack {
+  transform: rotate(90deg);
+  transform-origin: right center;
+  margin-right: 20px;
+}
+
+        /* DJELJENI STYLE */
+.card-back-stack {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 80px;
+  margin-top: 5px;
+}
+        /* OVERLAPPANJE KARTI DINAMICNO */
+.stacked-card {
+  background-color: transparent !important;
+  position: relative;
+  width: 100px;
+  height: auto;
+  margin-left: -60px;
+  transition: transform 0.2s ease;
+}
+
+.card-back-stack .stacked-card:first-child {
+  margin-left: 0;
+}
+
+       /*STOL / KARTE NA SREDINI*/
+
+.played-cards {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  gap: 10px;
+  z-index: 999;
+}
+
+.played-card-image {
+  width: 120px;
+  height: auto;
+  border-radius: 10px;
+  border: 2px solid white;
+  background-color: #1a1a2a;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+  transition: transform 0.2s ease;
+}
+
+      /*RECONNECT DIO*/
+
+.reconnecting-banner,
+.error-banner {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  font-weight: bold;
+  z-index: 9999;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.reconnecting-banner {
+  background-color: orange;
+  color: black;
+}
+
+.error-banner {
+  background-color: red;
+  color: white;
+}
+
 
 
 /*BOJE ZA DEBUGIRANJE PROFILEPAGEA*/
