--- a/belatro-frontend-web/src/App.css
+++ b/belatro-frontend-web/src/App.css
@@ -1,6 +1,10 @@
 
 body {
-  background-color: #323c39 !important;
+  /*background-color: #323c39 !important;*/
+  background-image: url("../public/images/low-poly-grid-haikei.svg") !important;
+  background-repeat: no-repeat !important;
+  background-position: center calc(50% + 75px) !important;
+  background-size: cover !important;
   margin: 0 !important;
   padding: 0 !important;
   font-family: Arial, sans-serif !important;
@@ -745,7 +749,7 @@ body {
   left: 100px;
   font-size: 18px;
   padding: 25px 40px;
-  transition: background-color 0.2s ease-in-out
+  transition: background-color 0.2s ease-in-out;
 }
 
 .leave-button:hover{
